GH-2573: Get rid of synchronized in the CCF
Fixes: #2573

Rework all the `synchronized` blocks in the `CachingConnectionFactory`
to `Lock` and `Condition`